# portfolio-tuner

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.MD  LICENSE  README.md  docker-compose.yml  pyproject.toml  symbols.example.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py
backend/src/application/ports/: account_data_importer.py  account_data_repo.py  market_data_provider.py  market_data_repo.py
backend/src/application/use_cases/: account.py  market_data.py  portfolio.py
backend/src/domain/aggregates/: account.py  portfolio.py  (+2 more)
backend/src/shared/: config.py
frontend/: Dockerfile  LEGAL.md  pyproject.toml
frontend/src/: app.py
frontend/src/pages/: 1_Market.py  2_Portfolio.py  9_About.py
frontend/src/presentation/: settings.py  styles.py
frontend/src/services/: api_client.py  streamlit_data.py
frontend/src/shared/: config_loader.py  dto.py  env_loader.py
frontend/src/utils/: dataframe.py  jobs.py  time.py
frontend/tests/: __init__.py
src/frontend/: Dockerfile  LEGAL.md  app.py  pyproject.toml
src/frontend/pages/: 1_Market.py  1_Market_ETFs.py  2_Market_Stocks.py  2_Portfolio.py  3_Portfolios.py  9_About.py
src/frontend/presentation/: styles.py
src/frontend/services/: api_client.py  streamlit_data.py
src/frontend/shared/: config_loader.py  dataframe.py  dto.py  env_loader.py  jobs.py  settings.py  styles.py  symbols.yml  symbols_loader.py
src/frontend/utils/: dataframe.py  jobs.py  market.py  time.py
src/frontend/widgets/: allocation.py  correlation.py  intraday.py  kpis.py  movers.py  optimizer.py  performance.py  positions.py  reports.py  risk_chart.py  statistics.py  transaction_form.py  treemaps.py
(+86 files in other folders)
