[project]
name = "portfolio-tuner-backend"
version = "1.0.2"
description = "Portfolio Tuner Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "coverage>=7.10.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
